--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -7,7 +7,7 @@
         type="image/png"
         href="/favicon.png?{{ key }}&v=3">
 
-    <title>Dashboard</title>
+    <title>Groceries</title>
     <style></style>
     <script type="text/javascript">
         {% include 'jquery-3.3.1.min.js' %}
