--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -8,7 +8,14 @@
         href="/favicon.png?{{ key }}&v=3">
 
     <title>Groceries</title>
-    <style></style>
+    <style type="text/css">
+        #food_search,
+        #food_search > tbody > tr > td,
+        #food_search > tbody > tr > th {
+            border:solid 1px black;
+            border-collapse: collapse;
+        }
+    </style>
     <script type="text/javascript">
         {% include 'jquery-3.3.1.min.js' %}
     </script>
@@ -17,9 +24,15 @@
 <body>
     <form
         id="test_form"
-        action="test?{{ key }}"
+        action="search?{{ key }}"
     >
-        <input type="text" placeholder="search terms" name='search_terms'><br>
+        <input
+            type="text"
+            placeholder="search
+            terms"
+            name='search_terms'
+            value='roma tomato'
+        ><br>
         <input type="submit">
     </form>
     <span id="test_span">test span</span>
@@ -30,7 +43,7 @@
             var form = $(this);
             var url = form.attr('action');
             $.ajax({
-                type: "POST",
+                type: "GET",
                 url: url,
                 data: form.serialize(),
                 success: function(data) {
