--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -40,12 +40,12 @@ Insert New Food:<br>
     id="insert_form"
 >
     <table>
-        <tr><td>Location</td><td><input name="location" type="text" id="insert_location" value="b"></td></tr>
-        <tr><td>Date</td><td><input name="date" type="text" id="insert_date" value="c"></td></tr>
-        <tr><td>Food</td><td><input name="food" type="text" id="insert_food" value="a"></td></tr>
-        <tr><td>Price</td><td><input name="price" type="text" id="insert_price" value="d"></td></tr>
-        <tr><td>Count</td><td><input name="count" type="text" id="insert_count" value="e"></td></tr>
-        <tr><td>Unit</td><td><input name="unit" type="text" id="insert_unit" value="f"></td></tr>
+        <tr><td>Location</td><td><input name="location" type="text" id="insert_location"></td></tr>
+        <tr><td>Date</td><td><input name="date" type="text" id="insert_date"></td></tr>
+        <tr><td>Food</td><td><input name="food" type="text" id="insert_food"></td></tr>
+        <tr><td>Price</td><td><input name="price" type="text" id="insert_price"></td></tr>
+        <tr><td>Count</td><td><input name="count" type="text" id="insert_count"></td></tr>
+        <tr><td>Unit</td><td><input name="unit" type="text" id="insert_unit"></td></tr>
     </table>
     <input type="submit"><br>
     <pre id="insert_loading_indicator"></pre>
